<resources>
    <string name="app_name">KP Express</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="alarm" />
    <string name="clock" />
    <string name="timer" />
    <string name="stopwatch" />
    <string name="home">Home</string>
    <string name="about">About</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="add_product">Add Product</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="photo">Photo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Name</string>
    <string name="profile">Profile</string>
    <string name="about_name">Ipan Taupik Rahman</string>
    <string name="about_email">taupik_ipan@rocketmail.com</string>
</resources>
