<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:orientation="vertical"
    tools:context="com.github.ipan97.kpexpress.ui.activity.AddProductActivity">

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor"
                    android:elevation="5dp"
                    app:cardCornerRadius="@dimen/loginCardRadius">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/add_product" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_name"
                                style="@style/modifiedEditText"
                                android:hint="Name"
                                android:inputType="text"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_price"
                                style="@style/modifiedEditText"
                                android:hint="@string/price"
                                android:inputType="numberDecimal"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            style="@style/parent"
                            android:layout_marginTop="10dp"
                            android:text="Photo" />

                        <Button
                            android:id="@+id/btn_choose_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:text="Choose File" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_description"
                                style="@style/modifiedEditText"
                                android:hint="@string/description"
                                android:inputType="text|textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_submit"
                            style="@style/loginButton"
                            android:layout_gravity="center"
                            android:text="@string/submit" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>